--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 streamlit==1.29.0
-openai==1.3.7
+openai>=1.2.3,<2.0
 faiss-cpu==1.7.4
-langchain==0.1.0
-langchain-openai==0.0.5
-langchain-community==0.0.13
-tiktoken==0.5.2
-requests==2.31.0
-beautifulsoup4==4.12.2
-selenium==4.15.2
-python-dotenv==1.0.0
+langchain==0.0.310
+tiktoken
+requests
+beautifulsoup4
+python-dotenv
