--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-streamlit==1.29.0
-openai>=1.2.3,<2.0
-faiss-cpu==1.7.4
-langchain==0.0.310
-tiktoken
-requests
-beautifulsoup4
-python-dotenv
+
+streamlit>=1.28.0
+python-dotenv>=0.19.0
+pandas>=1.5.0
+numpy>=1.20.0
+requests>=2.25.0
+openai>=1.0.0
+langchain>=0.1.0
+matplotlib>=3.5.0
+plotly>=5.0.0
